crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-third-party-import_singledispatch.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
singledispatch.py:12:20: TC002 (typing-only-third-party-import) [*] Move third-party import `pandas.DataFrame` into a type-checking block
   |
10 | from numpy.typing import ArrayLike
11 | from scipy.sparse import spmatrix
12 | from pandas import DataFrame
   |                    ^^^^^^^^^ TC002 (typing-only-third-party-import)
13 |
14 | if TYPE_CHECKING:
   |
   = help: Move into type-checking block

ℹ Unsafe fix
9  9  | from numpy import asarray
10 10 | from numpy.typing import ArrayLike
11 11 | from scipy.sparse import spmatrix
12    |-from pandas import DataFrame
13 12 | 
14 13 | if TYPE_CHECKING:
   14 |+    from pandas import DataFrame
15 15 |     from numpy import ndarray
16 16 | 
17 17 |
